# windows_assistant_toy

./: CMakeLists.txt  main.cpp
headers/: avatar.h
sources/: avatar.PVS-Studio.dfo  avatar.cpp
